--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(markmap)
 export(markmapOption)
 export(markmapOutput)
 export(md2mm)
+export(mdtxt2mmtxt)
 export(mm2md)
 export(outline)
 export(renderMarkmap)
+export(tree2mm)
 import(htmlwidgets)
