new features: conversion between .R and .md/.Rmd
two functions were added to convert between  .R and .md/.Rmd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(markmap)
 export(markmapOption)
 export(markmapOutput)
 export(md2mm)
+export(md2r)
 export(mdtxt2mmtxt)
 export(mm2md)
 export(outline)
+export(r2md)
 export(renderMarkmap)
 export(tree2mm)
 import(htmlwidgets)
