convertion between .Rmd, .R. and .mm
New Functions: r2rmd(), rmd2r(), r2mm(), mm2r().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,12 @@ export(md2mm)
 export(md2r)
 export(mdtxt2mmtxt)
 export(mm2md)
+export(mm2r)
 export(outline)
 export(r2md)
+export(r2mm)
+export(r2rmd)
 export(renderMarkmap)
+export(rmd2r)
 export(tree2mm)
 import(htmlwidgets)
