--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ LICENSE
 .Rproj.user/
 .Rbuildignore
 .Rhistory
+man/
 
 # Windows image file caches
 Thumbs.db
@@ -50,3 +51,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.Rproj.user
