--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,18 @@
 Package: mindr
-Version: 1.2.2.1
-Date: 2019-11-21
-Title: Convert Files Between Markdown or Rmarkdown Files and Mindmaps
+Version: 1.3.0
+Date: 2021-11-11
+Title: Generate Mind Maps with R
 Author: Peng Zhao
 Maintainer: Peng Zhao <pzhao@pzhao.net>
 Depends: R (>= 3.0.0)
 Imports: 
   htmlwidgets,
-  knitr,
-  jsonlite,
-  data.tree
+  knitr
 Suggests:
-Description: Convert Markdown ('.md') or Rmarkdown ('.Rmd') files into mindmap widgets or files ('.mm'), and vice versa. FreeMind mindmap ('.mm') files can be opened by or imported to common mindmap software such as 'FreeMind' (<http://freemind.sourceforge.net/wiki/index.php/Main_Page>) and 'XMind' (<http://www.xmind.net>).
-License: MIT + file LICENSE
+Description: Convert Markdown ('.md') or R Markdown ('.Rmd') texts, R scripts, and directory structures, into mind map widgets or files ('.mm'), and vice versa. "FreeMind" mind map ('.mm') files can be opened by or imported to common mindmap software such as 'FreeMind' (<http://freemind.sourceforge.net/wiki/index.php/Main_Page>).
+License: GPL-3 + file LICENSE
 URL: https://github.com/pzhaonet/mindr
 BugReports: https://github.com/pzhaonet/mindr/issues
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.2
 NeedsCompilation: no
