--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,9 @@ export(mm)
 export(mm2dir)
 export(mm2md)
 export(mm2r)
+export(mmm)
 export(outline)
+export(outline_pdf)
 export(r2dir)
 export(r2md)
 export(r2mm)
@@ -20,5 +22,7 @@ importFrom(htmlwidgets,createWidget)
 importFrom(htmlwidgets,sizingPolicy)
 importFrom(knitr,purl)
 importFrom(knitr,spin)
+importFrom(pdftools,pdf_toc)
+importFrom(rmarkdown,pandoc_convert)
 importFrom(stats,na.omit)
 importFrom(utils,head)
