--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: mindr
-Version: 1.3.1
-Date: 2021-11-18
+Version: 1.3.3
+Date: 2021-11-22
 Title: Generate Mind Maps with R
 Author: Peng Zhao
 Maintainer: Peng Zhao <pzhao@pzhao.net>
 Depends: R (>= 3.0.0)
 Imports: 
   htmlwidgets,
-  knitr
+  knitr,
+  rmarkdown,
+  pdftools
 Suggests:
-Description: Convert Markdown ('.md') or R Markdown ('.Rmd') texts, R scripts, and directory structures, into mind map widgets or files ('.mm'), and vice versa. "FreeMind" mind map ('.mm') files can be opened by or imported to common mindmap software such as 'FreeMind' (<http://freemind.sourceforge.net/wiki/index.php/Main_Page>).
-License: GPL-3 + file LICENSE
+SystemRequirements: pandoc (>= 1.14) - http://pandoc.org
+Description: Convert Markdown ('.md') or R Markdown ('.Rmd') texts, R scripts, directory structures, and other hierarchical structured documents into mind map widgets or files ('.mm'), and vice versa. "FreeMind" mind map ('.mm') files can be opened by or imported to common mindmap software such as 'FreeMind' (<http://freemind.sourceforge.net/wiki/index.php/Main_Page>).
+License: GPL-3
 URL: https://github.com/pzhaonet/mindr
 BugReports: https://github.com/pzhaonet/mindr/issues
 Roxygen: list(markdown = TRUE)
